# algorithms

./: .codeclimate.yml  .coveragerc  .flake8  .gitignore  .noserc  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  convert_txt_to_yaml.py  data_analysis.py  demo.py  ht.py  rereview-hearts-outputsponse_hearts.json  response_healthassessment.json  response_hearts.json  setup.cfg  setup.py  sg_demo.py  tests.py
COLOR_CHART_TEMPLATE/: c_d_f_s_40.txt
DEV/: __diabetes.py  __helpers.py  __utilities.py  cvdrisk_py2.py  diabetes.py  exampleImplementation.m  guideline_content.json  hearts.py  ht.py  risky.py
DEV/WHOfiles/: __sample.py
DEV/www/: app.js  app.jsx  index.html  report.html
OHA/: BaseAssessment.py  Defaults.py  Diabetes.py  Framingham.py  HEARTS.py  HT.py  HealthAssessment.py  SgFramingham.py  SingHealth.py  WHO.py  __assessments.py  __helpers.py  __sg_helpers.py  __unit.py  __utilities.py  guideline_content.json
OHA/assessments/: Assessment.py  BMIAssessment.py  BPAssessment.py  BaseAssessment.py  DiabetesAssessment.py  DietAssessment.py  HighRiskConditionAssessment.py  (+4 more)
OpenHealthAlgorithms/: Diabetes.py  Framingham.py  WHO.py  __helpers.py
cvdrisk/: __helpers.py  __request.py  __utilities.py  cvdrisk.py  cvdrisk_py2.py  diabetes.py  fre.py  generateWHOriskScore.m  guideline_content.json  guideline_hearts.json  hearts.py  request.json  response.json
django-docker/: Dockerfile
oha_dev/: db.sqlite3  manage.py
requirements/: README.md  dev.txt
tests/: test_diabetes.py  test_framingham.py  test_who.py
www/: index.html
(+39 files in other folders)
