[metadata]
name = OpenHealthAlgorithms
description = An implementation of health algorithms.
url = https://github.com/openhealthalgorithms/openhealthalgorithms
author = OpenHealthAlgorithms
author_email =
license = Apache

classifiers = Development Status :: 4 - Beta
              Intended Audience :: Developers
              Intended Audience :: Health-care Industry
              Intended Audience :: Science/Research
              Topic :: Scientific/Engineering :: Medical Science Apps.
              License :: OSI Approved :: Apache Software License
              Programming Language :: Python :: 3

[egg_info]
tag_date = false

[bdist_wheel]
universal = 1

[nosetests]
verbosity=1
with-coverage=true
cover-package=OHA
